<resources>
    <string name="app_name">FocaNE</string>
    <string name="value">
        Value
    </string>

    <string name="cadastrar">Cadastrar</string>
    <string name="Sair_Da_Conta">Sair da Conta</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Foca Nos Estudos</string>
    <string name="nav_header_subtitle">focanosestudosfne@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>

    <!-- TODO: tela de Login textos -->

    <string name="entrar">\Entrar</string>
    <string name="text_cadastro">Crie uma conta</string>
    <string name="entrar_gmail">Entrar com o gmail</string>

    <!-- TODO: tela de cadastro usuario -->

    <string name="title_cadastro">Faça seu Cadastro</string>
    <string name="title_cadastro_nome">Digite seu nome</string>
    <string name="title_cadastro_email">Digite seu e-mail</string>
    <string name="title_cadastro_criar_senha">Crie uma senha</string>
    <string name="title_cadastro_senha">Crie uma senha</string>



    <!-- TODO: menu inferior textos -->

    <string name="menu_inferior_home">Home</string>
    <string name="menu_inferior_favoritos">Favoritos</string>
    <string name="menu_inferior_materias">Materias</string>
    <string name="menu_inferior_busca">Busca</string>

    <!-- TODO: tela de adicionar atividade -->

    <string name="tela_add_atividade_titulo_principal">Criar Tarefa</string>
    <string name="tela_add_atividade_nome_da_tarefa">Nome da tarefa</string>
    <string name="tela_add_atividade_tarefa">Tarefa</string>
    <string name="tela_add_atividade_prazo_da_tarefa">Prazo Da Tarefa</string>
    <string name="tela_add_atividade_prazo_da_tarefa_inicial">Prazo Da Tarefa Inicial</string>
    <string name="tela_add_atividade_prazo_da_tarefa_final">Prazo Da Tarefa Final</string>
    <string name="tela_add_atividade_data_selecionada">Data Selecionada</string>
    <string name="tela_add_atividade_titulo">Titulo</string>
    <string name="tela_add_atividade_objetivo">Objetivo</string>
    <string name="tela_add_atividade_descricao_da_tarefa">Descrição Da Tarefa</string>
    <string name="tela_add_atividade_caixa_descricao_da_tarefa">Digite a descrição aqui</string>

    <string name="tela_add_atividade_Img_mascote">mascote foca feliz</string>
    <string name="tela_add_atividade_Button_final">Final</string>
    <string name="tela_add_atividade_Button_inicial">Inicial</string>
    <string name="tela_add_atividade_Button_salvar_tarefa">Salvar Tarefa</string>


    <!-- TODO: submenu lateral textos -->

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Historico</string>
    <string name="menu_slideshow">Lixeira</string>
    <string name="menu_perfil">Perfil</string>

    <!-- TODO: tela de entrada via dialogos -->

    <string name="informe">Mensagem da notificação</string>
    <string name="input_hint">Digite...</string>
    <string name="confirm">confirmar</string>
    <string name="cancel">cancelar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- TODO: Tela de cadastrar materia -->

    <string name="materia_cadastra">Cadastre sua matéria</string>
    <string name="materia_digite">Digite sua matéria aqui</string>
    <string name="materia_confirmar">Confirmar </string>
    <string name="materia_cancelar">Cancelar </string>

    <!-- TODO: Tela de cadastrar tarefa -->

    <string name="tarefa_titulo">Titulo</string>
    <string name="tarefa_nome">Nome da tarefa</string>
    <string name="tarefa_vencimento">Vencimento</string>
    <string name="tarefa_botao_feito">Marcar como feito</string>
    <string name="tarefa_do_titulo">Titulo da tarefa</string>
    <string name="tarefa_objetivo">Objetivo</string>
    <string name="tarefa_descricao">Descrição</string>
    <string name="tarefa_botao_deletar">Deletar</string>
    <string name="tarefa_descricao_tarefa">Descrição da tarefa</string>
</resources>