<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.materias.AddTarefaActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >

    <TextView
        android:id="@+id/textViewTarefaTitulo"
        style="@style/TitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/tela_add_atividade_titulo_principal"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editTextNomeTarefa"
        style="@style/BolhaDeCaixa"
        android:layout_marginTop="40dp"
        android:autofillHints="task"
        android:drawableEnd="@drawable/ic_livro"
        android:hint="@string/tela_add_atividade_tarefa"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTarefaTitulo" />

    <TextView
        android:id="@+id/textViewTarefa"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tela_add_atividade_nome_da_tarefa"
        app:layout_constraintBottom_toTopOf="@+id/editTextNomeTarefa"
        app:layout_constraintStart_toStartOf="@+id/editTextNomeTarefa" />

    <Button
        android:id="@+id/buttonSelectDateInicio"
        style="@style/buttonPequeno"
        android:layout_marginEnd="20dp"
        android:text="@string/tela_add_atividade_Button_inicial"
        app:layout_constraintEnd_toEndOf="@+id/editTextNomeTarefa"
        app:layout_constraintTop_toBottomOf="@+id/editTextNomeTarefa" />

    <TextView
        android:id="@+id/textViewDataFim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tela_add_atividade_data_selecionada"
        style="@style/LabelStyle"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSelectDateFim"
        app:layout_constraintEnd_toStartOf="@+id/buttonSelectDateFim"
        app:layout_constraintStart_toStartOf="@+id/textViewPrazo"
        app:layout_constraintTop_toTopOf="@+id/buttonSelectDateFim" />

    <Button
        android:id="@+id/buttonSelectDateFim"
        style="@style/buttonPequeno"
        android:text="@string/tela_add_atividade_Button_final"
        app:layout_constraintEnd_toEndOf="@+id/editTextNomeTarefa"
        app:layout_constraintTop_toBottomOf="@+id/buttonSelectDateInicio" />

    <TextView
        android:id="@+id/textViewDataInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tela_add_atividade_data_selecionada"
        style="@style/LabelStyle"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSelectDateInicio"
        app:layout_constraintEnd_toStartOf="@+id/buttonSelectDateInicio"
        app:layout_constraintStart_toStartOf="@+id/textViewPrazo"
        app:layout_constraintTop_toTopOf="@+id/buttonSelectDateInicio" />

    <TextView
        android:id="@+id/textViewPrazo"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/tela_add_atividade_prazo_da_tarefa"
        app:layout_constraintStart_toStartOf="@+id/editTextNomeTarefa"
        app:layout_constraintTop_toBottomOf="@+id/editTextNomeTarefa" />


    <TextView
        android:id="@+id/textViewSubTitulo"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tela_add_atividade_titulo"
        app:layout_constraintBottom_toTopOf="@+id/editTextTitulo"
        app:layout_constraintStart_toStartOf="@+id/editTextTitulo" />

    <EditText
        android:id="@+id/editTextTitulo"

        android:drawableEnd="@drawable/ic_add_compartilhar"
        android:ems="10"
        android:hint="@string/tela_add_atividade_titulo"
        android:inputType="text"
        android:autofillHints="title"
        style="@style/BolhaDeCaixa"
        app:layout_constraintEnd_toEndOf="@+id/editTextNomeTarefa"
        app:layout_constraintStart_toStartOf="@+id/editTextNomeTarefa"
        app:layout_constraintTop_toBottomOf="@+id/buttonSelectDateFim" />


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="102dp"
        android:layout_height="118dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/tela_add_atividade_Img_mascote"
        android:src="@drawable/focafeliz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.983"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewObjetivo"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tela_add_atividade_objetivo"
        app:layout_constraintStart_toStartOf="@+id/editTextTitulo"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitulo" />

    <EditText
        android:id="@+id/editTextObjetivo"
        android:drawableEnd="@drawable/ic_livro"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        android:hint="@string/tela_add_atividade_objetivo"
        style="@style/BolhaDeCaixa"
        android:autofillHints="goal"
        app:layout_constraintEnd_toEndOf="@+id/editTextNomeTarefa"
        app:layout_constraintStart_toStartOf="@+id/editTextNomeTarefa"
        app:layout_constraintTop_toBottomOf="@+id/textViewObjetivo" />


    <TextView
        android:id="@+id/textViewDescricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tela_add_atividade_descricao_da_tarefa"
        style="@style/LabelStyle"
        app:layout_constraintStart_toStartOf="@id/editTextObjetivo"
        app:layout_constraintTop_toBottomOf="@id/editTextObjetivo" />

    <EditText
        android:id="@+id/editTextMultiLineDescricao"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:hint="@string/tela_add_atividade_caixa_descricao_da_tarefa"
        android:inputType="textMultiLine"
        android:autofillHints="description"
        app:layout_constraintEnd_toEndOf="@id/editTextNomeTarefa"
        app:layout_constraintStart_toStartOf="@id/editTextNomeTarefa"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescricao" />

    <Button
        android:id="@+id/button"
        style="@style/button"
        android:layout_marginTop="20dp"
        android:text="@string/tela_add_atividade_Button_salvar_tarefa"
        app:layout_constraintEnd_toEndOf="@id/editTextNomeTarefa"
        app:layout_constraintStart_toStartOf="@id/editTextNomeTarefa"
        app:layout_constraintTop_toBottomOf="@id/editTextMultiLineDescricao" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>