<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_cadastro"
    tools:context=".ui.cadastro.Cadastro">

    <ImageView
        android:id="@+id/imageViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_cadastro"
        app:srcCompat="@drawable/focafeliz" />

    <TextView
        android:id="@+id/title_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/title_cadastro"
        android:textColor="@color/white"
        android:textSize="45dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />

    <View
        style="@style/ContainerComponents"
        android:id="@+id/containerComponents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogin" />

    <EditText
        android:id="@+id/editTextNome"
        android:hint="@string/title_cadastro_nome"
        android:inputType="text"
        android:drawableEnd="@drawable/ic_user"
        style="@style/BolhaDeCaixa"
        app:layout_constraintEnd_toEndOf="@+id/containerComponents"
        app:layout_constraintStart_toStartOf="@+id/containerComponents"
        app:layout_constraintTop_toTopOf="@+id/containerComponents"
        />

    <EditText
        android:id="@+id/editTextEmail"
        android:hint="@string/title_cadastro_email"
        android:inputType="textEmailAddress"
        android:drawableEnd="@drawable/ic_email"
        style="@style/BolhaDeCaixa"
        app:layout_constraintEnd_toEndOf="@+id/containerComponents"
        app:layout_constraintStart_toStartOf="@+id/containerComponents"
        app:layout_constraintTop_toBottomOf="@+id/editTextNome"
        />
    <EditText
        android:id="@+id/editTextSenha"
        android:hint="@string/title_cadastro_criar_senha"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/ic_crier_senha"
        style="@style/BolhaDeCaixa"
        app:layout_constraintEnd_toEndOf="@+id/containerComponents"
        app:layout_constraintStart_toStartOf="@+id/containerComponents"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        />
    <EditText
        android:id="@+id/editTextSenhaConfirme"
        android:hint="@string/title_cadastro_senha"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/ic_crier_senha"
        style="@style/BolhaDeCaixa"
        app:layout_constraintEnd_toEndOf="@+id/containerComponents"
        app:layout_constraintStart_toStartOf="@+id/containerComponents"
        app:layout_constraintTop_toBottomOf="@+id/editTextSenha"
        />

    <RadioButton
        android:id="@+id/radioButtonTemosDeUso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        android:text="RadioButton"
        app:layout_constraintStart_toEndOf="@+id/containerComponents"
        app:layout_constraintStart_toStartOf="@+id/containerComponents"
        app:layout_constraintTop_toBottomOf="@+id/editTextSenhaConfirme"
        tools:ignore="HardcodedText" />


    <RadioButton
        android:id="@+id/radioButtonTermosPrivacidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="RadioButton"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@+id/containerComponents"
        app:layout_constraintStart_toStartOf="@+id/containerComponents"
        app:layout_constraintTop_toBottomOf="@+id/radioButtonTemosDeUso"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="802dp"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/button"
        android:id="@+id/buttonCadastrar"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/cadastrar"
        app:layout_constraintStart_toEndOf="@+id/containerComponents"
        app:layout_constraintStart_toStartOf="@+id/containerComponents"
        app:layout_constraintTop_toBottomOf="@+id/radioButtonTermosPrivacidade" />




</androidx.constraintlayout.widget.ConstraintLayout>