<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/background"
    tools:context=".ui.tarefas.TarefaActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="@drawable/background_light"
   >


    <ImageButton
        android:id="@+id/btnEditar6"
        android:layout_alignParentEnd="true"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Editar"
        android:src="@drawable/ic_lapis"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTarefaTitulo"
        app:layout_constraintStart_toEndOf="@+id/textViewTarefaTitulo"
        app:layout_constraintTop_toTopOf="@+id/textViewTarefaTitulo"
        tools:ignore="HardcodedText,UseAppTint" />

    <ImageButton
        android:id="@+id/btnEditar5"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Edit"
        android:src="@drawable/ic_lapis"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTarefaDataInicial"
        app:layout_constraintStart_toEndOf="@+id/textViewTarefaDataInicial"
        app:layout_constraintTop_toTopOf="@+id/textViewTarefaDataInicial"
        tools:ignore="HardcodedText,UseAppTint" />

    <ImageButton
        android:id="@+id/btnEditar3"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Editarr"
        android:src="@drawable/ic_lapis"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTarefaNomeDaTarefa"
        app:layout_constraintStart_toEndOf="@+id/textViewTarefaNomeDaTarefa"
        app:layout_constraintTop_toTopOf="@+id/textViewTarefaNomeDaTarefa"
        tools:ignore="HardcodedText,UseAppTint" />

    <ImageButton
        android:id="@+id/btnEditar4"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Edita"
        android:src="@drawable/ic_lapis"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTarefaDataFim"
        app:layout_constraintStart_toEndOf="@+id/textViewTarefaDataFim"
        app:layout_constraintTop_toTopOf="@+id/textViewTarefaDataFim"
        tools:ignore="HardcodedText,UseAppTint" />

    <TextView
        android:id="@+id/textViewTarefaNomeDaTarefa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/tarefa_nome"
        style="@style/LabelStyleTarefa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTarefaTitulo" />

    <Button
        android:id="@+id/buttonFeito"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/tarefa_botao_feito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTarefaNomeDaTarefa" />

    <TextView
        android:id="@+id/textViewTarefaDataFim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tarefa_vencimento"
        style="@style/LabelStyleTarefa"
        app:layout_constraintBottom_toBottomOf="@+id/buttonFeito"
        app:layout_constraintTop_toTopOf="@+id/buttonFeito"
        tools:layout_editor_absoluteX="16dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewTarefaDataInicial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tarefa_do_titulo"
        style="@style/LabelStyleTarefa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFeito" />

    <ImageButton
        android:id="@+id/btnEditar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Editar Taref"
        android:src="@drawable/ic_lapis"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTarefaObjetivo"
        app:layout_constraintStart_toEndOf="@+id/textViewTarefaObjetivo"
        app:layout_constraintTop_toTopOf="@+id/textViewTarefaObjetivo"
        tools:ignore="HardcodedText,UseAppTint" />

    <ImageButton
        android:id="@+id/btnEditar2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Editar Tarefa"
        android:src="@drawable/ic_lapis"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView12"
        tools:ignore="HardcodedText,UseAppTint" />

    <TextView
        android:id="@+id/textViewTarefaObjetivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tarefa_objetivo"
        style="@style/LabelStyleTarefa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTarefaDataInicial" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/tarefa_descricao"
        style="@style/LabelStyleTarefa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTarefaObjetivo" />

    <ImageView
        android:id="@+id/imageViewTarefaMascote"
        android:layout_width="173dp"
        android:layout_height="138dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/focalendo" />

    <TextView
        android:id="@+id/textViewTarefaTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Titulo"
        style="@style/TitleStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTarefaMascote"
        tools:ignore="HardcodedText" />


    <Button
        android:id="@+id/buttonDeletar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:padding="16dp"
        android:text="@string/tarefa_botao_deletar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTarefaDetalhes"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewTarefaDetalhes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tarefa_descricao_tarefa"
        android:textColor="@color/white"
        style="@style/LabelStyleTarefa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>